[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true

near_ops.workspace = true
