[package]
name = "near_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-workspaces.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
